--- a/views/productAdd.ejs
+++ b/views/productAdd.ejs
@@ -1,16 +1,14 @@
 <!doctype html>
-<html lang="ko">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="static/js/productList.js"></script>
-    <link rel="stylesheet" href="static/css/productList.css">
+    <script src="static/js/productAdd.js"></script>
 </head>
 
 <body>
@@ -27,8 +25,11 @@
                     <li class="nav-item">
                         <a class="nav-link " aria-current="page" href="#">홈</a>
                     </li>
+
+
                 </ul>
                 </li>
+
                 <li class="nav-item">
                     <a class="nav-link disabled">Disabled</a>
                 </li>
@@ -44,11 +45,71 @@
     </nav>
     <main class="mt-3">
         <div class="container">
-            <div class="row mb-2">
-                <div class="col-12">
+            <h2 class="text-center">제품 등록 </h2>
+            <div class="mb-3 row" id="file_form">
+                <label class="col-md-3 col-form-label">제품명</label>
+                <div class="col-md-9">
+                    <input for="name" id="name" type="text" class="form-control">
                 </div>
             </div>
-            <div class="row g-3" id="product-box">
+            <div class="mb-3 row">
+                <label class="col-md-3 col-form-label">제품가격</label>
+                <div class="col-md-9">
+                    <div class="input-group mb-3">
+                        <input for="price" id="price" type="number" class="form-control">
+                        <span class="input-group-text">원</span>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="mb-3 row">
+                <label class="col-md-3 col-form-label">상품설명</label>
+                <div class="col-md-9">
+                    <input for="info" id="info" type="text" class="form-control">
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <label class="col-md-3 col-form-label">썸네일이미지</label>
+                <div class="col-md-9">
+                    <input id="Image" class="form-control" type="file" accept="image/png,image/jpeg">
+                    <div class="alert alert-secondary" role="alert">
+                        <ul>
+                            <li>이미지 사이즈:350*350</li>
+                            <li>파일 사이즈:1M 이하</li>
+                            <li>파일 확장자:png,jpg만 가능</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="mb-3 row">
+                <div class="col-6 d-grid p-1">
+                    <button type="button" class="btn btn-lg btn-dark" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal"> 취소하기</button>
+                </div>
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                제품등록을 취소하시겠습니까?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-primary">OK</button>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 d-grid p-1">
+                    <button onclick="productAdd()" type="button" class="btn btn-lg btn-danger">저장하기</button>
+                </div>
             </div>
         </div>
     </main>
