--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,57 +1,210 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>상품 조회</title>
+
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+        crossorigin="anonymous">
+
+    <!-- JS -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+
+    <!-- style -->
+    <style type="text/css">
+        * {
+        box-sizing: border-box;
+        }
+
+        body {
+        margin: 0;
+        min-width: 992px;
+        font-family: "Helvetica";
+        }
+
+        .navbar{
+        height: 60px;
+        padding-left: 30px;
+        }
+
+        .logo{
+        line-height: 60px;
+        float: left;
+        }
+
+        .logo img{
+        vertical-align: middle;
+        }
+
+        .navbar ul{
+        float: right;
+        }
+
+        .navbar li{
+        list-style-type: none;
+        float: left;
+        margin-right: 30px;
+        }
+
+        .navbar a{
+        text-decoration: none;
+        color: black;
+        font-style: bold;
+        font-size: 13px;
+        }
+
+        .hero_header{
+        height: 450px;
+        width: 100%;
+        }
+
+        body h1{
+        text-align: center;
+        margin-top: 60px;
+        margin-bottom: 60px;
+        font-size: 24px;
+        font-style: bold;
+        color: #545454;
+        }
+
+        .products {
+        margin-left: auto;
+        margin-right: auto;
+        padding: 0;
+        width: 740px;
+        text-align: center;
+        }
+
+        .products img{
+        width: 225px;
+        height: 225px;
+        margin-right: 20px;
+        margin-bottom: 20px;
+        }
+
+        .products a{
+        text-decoration: none;
+        color: black;
+        float: left;
+        font-size: 16px;
+        }
+
+        .gap{
+        margin-top: 4px;
+        margin-bottom: 80px;
+        }
+
+        .clearfix{
+        clear: both;
+        }
+
+        .footer{
+        text-align: center;
+        }
+
+        .footer img{
+        margin-top: 40px;
+        height: 20px;
+        margin-bottom: 80px;
+        margin-left: 10px;
+        margin-right: 10px;
+        }
+    </style>
+
+    <script>
+        $(document).ready(function () {
+            showProducts();
+        });
+
+        function showProducts() {
+            $("#products-box").html("");
+            $.ajax({
+                type: "GET",
+                url: "/productList",
+                data: {},
+                success: function (response) {
+                    console.log("response------", response)
+                    let products = response["productList"];
+                    console.log('products-----', products)
+                    for (let i = 0; i < products.length; i++) {
+                        makeProduct(
+                            products[i]["productId"],
+                            products[i]["image"], 
+                            products[i]["info"], 
+                            products[i]["name"], 
+                            products[i]["price"]
+                            );
+                        }
+                    }
+                });
+            }
+
+        function makeProduct(productId, image, info, name, price) {
+            console.log('productId---------',productId)
+            let tempHtml = `<a href="#">
+                            <img src="${image}">
+                            <p>제품명 : ${name}</p>
+                            <p>설명 : ${info}</p>
+                            <p class="price">${price}원</p>
+                            <button onclick="putCart(${productId})" type="button" class="btn btn-primary">장바구니 담기</button>
+                            <p class="gap"></p>
+                            </a>`;
+            $("#products-box").append(tempHtml);
+        }
+
+        function putCart(productId) {
+            $.ajax({
+                type: "POST",
+                url: "/general/cart/" + productId,
+                data: {},
+                success: function (response) {
+                    if (response['result'] == 'success') {
+                        alert('장바구니 담기 완료!');
+                    }
+                }
+            });
+        }
+    </script>
+
 </head>
-
-<style>
-    .mainBox {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-        height: 100vh;
-    }
-
-    .btn {
-        width: 150px;
-        padding: 10px;
-        background-color: #4CAF50;
-        color: white;
-        border-radius: 5px;
-        border: none;
-        cursor: pointer;
-        margin-top: 20px;
-    }
-</style>
-
 <body>
-    <div class="mainBox">
-    <h1>main</h1>
-    <% if (user) { %>
-      <% if (user.userType === 2) { %>
-      <%= user.email.split('@')[0] %>님 안녕하세요. 
-      <button id="logout" type="button" onclick="location.href='/auth/logout'"  class="btn">로그아웃</button>
-      <button id="main"   type="button" onclick="location.href='/adminprofile'" class="btn">관리자 페이지</button>
-      <% } else { %>
-      <%= user.email.split('@')[0] %>님 안녕하세요. 
-      <button id="logout" type="button" onclick="location.href='/auth/logout'"  class="btn">로그아웃</button>
-      <button id="main"   type="button" onclick="location.href='/profile'"      class="btn">마이페이지</button>
-      <% } %>
-    <% } else { %>
-    <button id="login"  type="button" onclick="location.href='/auth/login'"   class="btn">로그인 하러가기</button>
-    <button id="signup" type="button" onclick="location.href='/auth/signup'"  class="btn">회원가입</button>
-    <% } %>
-    </div>
+    <div class="navbar">
+        <a class="logo" href="#"> </a>
+        <ul>
+          <% if (user) { %>
+            <% if (user.userType === 2) { %>
+              <li><%= user.email.split('@')[0] %>관리자님 안녕하세요</li>
+              <li><a href="/adminprofile">관리자 페이지</a></li>
+              <li><a href="/auth/logout">로그아웃</a></li> 
+            <% } else { %>
+              <li><%= user.email.split('@')[0] %>님 안녕하세요</li>       
+              <li><a href="/general/cart">장바구니</a></li>
+              <li><a href="/profile">마이페이지</a></li>
+              <li><a href="/auth/logout">로그아웃</a></li> 
+            <% } %>
+          <% } else { %>                                      
+            <li><a href="/auth/login">로그인</a></li>
+            <li><a href="/auth/signup">회원가입</a></li>
+          <% } %>
+        </ul>
+      </div>
+      
+      <img class="hero_header" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQMjNY7M1CKqyczEyfEqBXtX8E4QcprgySvmA&usqp=CAU">
+      <h1>Our new Products</h1>
+      <div id="products-box" class="products">
+  
+        <div class="clearfix"></div>
+      </div>
+    
 </body>
 </html>
-
-
-
-
-
-
-
