구현된 프론트 연결완료

--- a/views/userpage.ejs
+++ b/views/userpage.ejs
@@ -17,7 +17,7 @@
         <nav id="guestInfo" class="top-bar"
             style="position:absolute; top:200px; right: 250px; text-align:center; float: right; display: inline-block;">
         </nav>
-        <button type="button" class="btn btn-warning" onclick="order(userid)">개인정보 수정</button>
+        <button type="button" class="btn btn-warning" onclick="location.href='/userProfileEdit'">개인정보 수정</button>
         <button type="button" class="btn btn-warning" onclick="orderStatus(userid)">주문 목록</button>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.js"
