--- a/views/adminInprofile.ejs
+++ b/views/adminInprofile.ejs
@@ -1,18 +1,195 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
-    <button id="main" type="button" onclick="location.href='/'" class="btn">main</button>
-    <% if (user) { %>
-    <%= user.email.split('@')[0] %>관리자님 마이페이지 <% } %>
-    <button id="logout" type="button" onclick="location.href='/auth/logout'" class="btn">로그아웃</button>
-    <button id="Withdrawal" type="button" onclick="if (confirm('회원탈퇴를 하시겠습니까?')) location.href='/auth/withdrawal'" class="btn">회원탈퇴</button>
+        <script src="static/js/productList.js"></script>
+        <link rel="stylesheet" href="static/css/productList.css">
+    </head>
+
+    <title>Admin Profile</title>
+</head>
+<style type="text/css">
+    * {
+    box-sizing: border-box;
+    }
+
+    body {
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+        min-width: 992px;
+        font-family: "Helvetica";
+    }
+
+    .navbar{
+    height: 60px;
+    padding-left: 30px;
+    }
+
+    .logo{
+    line-height: 60px;
+    float: left;
+    }
+
+    .logo img{
+    vertical-align: middle;
+    }
+
+    .navbar ul{
+    float: right;
+    }
+
+    .navbar li{
+    list-style-type: none;
+    float: left;
+    margin-right: 30px;
+    }
+
+    .navbar a{
+    text-decoration: none;
+    color: black;
+    font-style: bold;
+    font-size: 13px;
+    }
+
+    .hero_header{
+    height: auto;
+    width: 100%;
+    }
+
+    body h1{
+    text-align: center;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    font-size: 24px;
+    font-style: bold;
+    color: #545454;
+    }
+
+    .products {
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
+    /* width: 740px; */
+    text-align: center;
+    }
+
+    .products img{
+    /* width: 225px;
+    height: 225px; */
+    margin-right: 20px;
+    margin-bottom: 20px;
+    }
+
+    .products a{
+    text-decoration: none;
+    color: black;
+    float: left;
+    font-size: 16px;
+    }
+
+    .gap{
+    margin-top: 4px;
+    margin-bottom: 80px;
+    }
+
+    .clearfix{
+    clear: both;
+    }
+
+    .footer{
+    text-align: center;
+    }
+
+    .footer img{
+    margin-top: 40px;
+    height: 20px;
+    margin-bottom: 80px;
+    margin-left: 10px;
+    margin-right: 10px;
+    }
+
+    #navButton {
+        margin-top:  3px;
+        margin-left: 5px;
+    }
+
+    #navName {
+        margin-top:  10px;
+    }
+</style>
+
+<script>
+    function deleteProduct(productId) {
+        $.ajax({
+                type: "DELETE",
+                url: "/admin/productDelete/" + productId,
+                data: {},
+                success: function (response) {
+                    if (response['result'] == 'success') {
+                        alert('삭제 완료!');
+                        window.location.reload();
+                    }
+                }
+            });
+        }
+</script>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">오지는 젤리</a>
+    
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <!-- <a class="nav-link " aria-current="page" href="#">홈</a> -->
+                    </li>
+                </ul>
+
+                <div class="navbar">
+                    <!-- <a class="logo" href="#"> </a> -->
+                    <ul>
+                        <% if (user) { %>
+                            <% if (user.userType === 2) { %>   
+                              <li id="navName">Hello <%= user.email.split('@')[0] %></li>
+                              <button id="navButton" type="button" onclick="location.href='/productAdd'" class="btn btn-outline-success">상품등록</button> 
+                              <button id="navButton" type="button" onclick="location.href='#'" class="btn btn-outline-success">주문목록</button> 
+                              <button id="navButton" type="button" onclick="location.href='#'" class="btn btn-outline-success">회원정보</button> 
+                              <button id="navButton" type="button" onclick="location.href='/auth/logout'" class="btn btn-outline-success">Logout</button>  
+                            <% } %>
+                        <% } %> 
+                    </ul>
+                  </div>
+            </div>
+        </div>
+    </nav>
+
+    <main class="mt-3">
+        <div class="container">
+            <div class="row mb-2">
+                <div class="col-12">
+                </div>
+            </div>
+            <div class="row g-3" id="product-box">
+            </div>
+        </div>
+    </main>
+    
 
 </body>
+
 </html>
