--- a/views/userpage.ejs
+++ b/views/userpage.ejs
@@ -18,7 +18,7 @@
             style="position:absolute; top:200px; right: 250px; text-align:center; float: right; display: inline-block;">
         </nav>
         <button type="button" class="btn btn-warning" onclick="location.href='/userProfileEdit'">개인정보 수정</button>
-        <button type="button" class="btn btn-warning" onclick="orderStatus(userid)">주문 목록</button>
+        <button type="button" class="btn btn-warning" onclick="location.href='/paymentList'">주문 목록</button>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
