--- a/views/paymentList.ejs
+++ b/views/paymentList.ejs
@@ -4,17 +4,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>4Legs</title>
+    <title>5zizo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-        <script src="static/js/paymentList.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="static/js/paymentList.js"></script>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">4legs</a>
+            <a class="navbar-brand" href="#">5zizo</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -25,11 +25,8 @@
                     <li class="nav-item">
                         <a class="nav-link " aria-current="page" href="#">홈</a>
                     </li>
-
-
                 </ul>
                 </li>
-
                 <li class="nav-item">
                     <a class="nav-link disabled">Disabled</a>
                 </li>
@@ -45,103 +42,23 @@
     </nav>
     <main class="mt-3">
         <div class="container">
-            <h2 class="text-center">결제 정보 </h2>
-            <div class="container" id=orderlist>
-
-            </div>
-
-            <div class="row pt-3 pb-3 border-top">
-                <div class="col-6">
-                    <h3>총 상품 금액</h3>
-                </div>
-                <div class="col-6" style="text-align: right;">
-                    <h3>${subPrice}</h3>
-                </div>
-            </div>
-
-            <div class="mb-3 row">
-                <div class="col-6 d-grid p-1">
-                    <button type="button" class="btn btn-lg btn-dark" data-bs-toggle="modal"
-                        data-bs-target="#exampleModal"> 취소하기</button>
-                </div>
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                주문을 취소하시겠습니까?
-                            </div>
-                            <div class="modal-footer">
-                                <button onclick="location.href='/'" type="button" class="btn btn-primary">OK</button>
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-6 d-grid p-1">
-                    <button onclick="order()" type="button" class="btn btn-lg btn-danger">결제하기</button>
-                </div>
+            <h2 class="text-center">주문 정보 </h2>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">상품명</th>
+                        <th scope="col">성함</th>
+                        <th scope="col">주소</th>
+                        <th scope="col">전화번호</th>
+                        <th scope="col">메일</th>
+                        <th scope="col">구매일시</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+            <div class=productlist id="productlist">
             </div>
         </div>
     </main>
-    <footer class="mt-5 py-5 bg-dark">
-        <div class="row">
-            <div class="col-12 col-md">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"
-                    stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mb-2" role="img"
-                    viewBox="0 0 24 24">
-                    <title>Product</title>
-                    <circle cx="12" cy="12" r="10" />
-                    <path
-                        d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94" />
-                </svg>
-                <small class="d-block mb-3 text-muted">&copy; 2017–2022</small>
-            </div>
-            <div class="col-6 col-md">
-                <h5>Features</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="link-secondary" href="#">Cool stuff</a></li>
-                    <li><a class="link-secondary" href="#">Random feature</a></li>
-                    <li><a class="link-secondary" href="#">Team feature</a></li>
-                    <li><a class="link-secondary" href="#">Stuff for developers</a></li>
-                    <li><a class="link-secondary" href="#">Another one</a></li>
-                    <li><a class="link-secondary" href="#">Last time</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md">
-                <h5>Resources</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="link-secondary" href="#">Resource name</a></li>
-                    <li><a class="link-secondary" href="#">Resource</a></li>
-                    <li><a class="link-secondary" href="#">Another resource</a></li>
-                    <li><a class="link-secondary" href="#">Final resource</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md">
-                <h5>Resources</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="link-secondary" href="#">Business</a></li>
-                    <li><a class="link-secondary" href="#">Education</a></li>
-                    <li><a class="link-secondary" href="#">Government</a></li>
-                    <li><a class="link-secondary" href="#">Gaming</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md">
-                <h5>About</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="link-secondary" href="#">Team</a></li>
-                    <li><a class="link-secondary" href="#">Locations</a></li>
-                    <li><a class="link-secondary" href="#">Privacy</a></li>
-                    <li><a class="link-secondary" href="#">Terms</a></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
 </body>
-
-</html>
