--- a/views/login.ejs
+++ b/views/login.ejs
@@ -61,33 +61,28 @@
         cursor: pointer;
         margin-top: 20px;
     }
-    /* #kakao {
-        width: 100%;
-        padding: 10px;
-        background-color: #b5ed45;
-        color: rgb(0, 0, 0);
-        border-radius: 5px;
-        border: none;
-        cursor: pointer;
-        margin-top: 20px;
-    } */
+
+    #Oztitle {
+        margin-bottom: 40px;
+        text-decoration: none;
+        color: rgb(98, 94, 94);
+    }
   </style>
 <body>
     <div class="loginOutBox">
-        <button id="main" type="button" onclick="location.href='/'" class="btn">main</button>
+        <h1 id="Oztitle"><a id="Oztitle" href="/">💜 오지는 젤리 💚</a></h1>
+
         <form id="login-form" action="/auth/login" method="post">
           <div class="input-group">
-            <label for="email">이메일</label>
-            <input id="email" type="email" name="email" required autofocus>
+            <input id="email" type="email" name="email" placeholder="email" required autofocus>
           </div>
           <div class="input-group">
-            <label for="password">비밀번호</label>
-            <input id="password" type="password" name="password" required>
+            <input id="password" type="password" name="password" placeholder="password" required>
           </div>
           <button id="login"  type="submit" class="btn">로그인</button>
           <button id="signup" type="button" onclick="location.href='/auth/signup'" class="btn">회원가입</button>
-          <!-- <button id="kakao"  href="/auth/kakao" class="btn">카카오톡</button> -->
         </form>
+
       </div>
 </body>
 </html>
