--- a/views/main.ejs
+++ b/views/main.ejs
@@ -33,7 +33,7 @@
             display: flex;
             flex-direction: column;
             margin: 0;
-            min-width: 992px;
+            /* min-width: 992px; */
             font-family: "Helvetica";
         }
 
@@ -86,7 +86,7 @@
         margin-left: auto;
         margin-right: auto;
         padding: 0;
-        /* width: 740px; */
+        /* width: 500px; */
         text-align: center;
         }
 
@@ -133,6 +133,17 @@
         #navName {
             margin-top:  10px;
         }
+        img {
+            object-fit: contain;
+        }
+        #addButton{
+            margin-left: 95px;
+        }
+        #addButton-group {
+            display: flex;
+            align-items: center;
+        }
+
     </style>
 
     <script>
@@ -175,9 +186,9 @@
                                         <span class="badge bg-dark">${info}</span>                                                  
                                         </p>
                                         <div class= "d-flex justify-content-between align-items-center">
-                                            <div class="btn-group" role="group" >      
+                                            <div id="addButton-group" class="btn-group" role="group" >      
                                             <small class="text-dark" id="priceinput">가격 : ${price}원</small><br>             
-                                            <button onclick="putCart(${productId})" type="button" class="btn btn-sm btn-outline-secondary">Add Cart</button>
+                                            <button id="addButton" onclick="putCart(${productId})" type="button" class="btn btn-sm btn-outline-secondary">Add Cart</button>
                                             </div>
                                         </div>
                                     </div>
@@ -205,13 +216,13 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">오지는 젤리</a>
+            <a class="navbar-brand" href="/">💜 오지는 젤리 💚</a>
     
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>
+            </button> -->
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -225,11 +236,11 @@
                     <ul>
                       <% if (user) { %>
                         <% if (user.userType === 2) { %>
-                          <li id="navName">Hello Admin <%= user.email.split('@')[0] %></li>
+                          <li id="navName">✨ Hello Admin <%= user.email.split('@')[0] %></li>
                           <button id="navButton" type="button" onclick="location.href='/adminprofile'" class="btn btn-outline-success">Admin page</button> 
                           <button id="navButton" type="button" onclick="location.href='/auth/logout'" class="btn btn-outline-success">Logout</button>  
                         <% } else { %>
-                          <li id="navName">Hello <%= user.email.split('@')[0] %></li>       
+                          <li id="navName">✨ Hello <%= user.email.split('@')[0] %></li>       
                           <button id="navButton" type="button" onclick="location.href='/general/cart'" class="btn btn-outline-success">Cart</button> 
                           <button id="navButton" type="button" onclick="location.href='/profile'"      class="btn btn-outline-success">My Page</button> 
                           <button id="navButton" type="button" onclick="location.href='/auth/logout'"  class="btn btn-outline-success">Logout</button> 
