--- a/views/productAdd.ejs
+++ b/views/productAdd.ejs
@@ -122,27 +122,25 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">오지는 젤리</a>
+            <a class="navbar-brand" href="/">💜 오지는 젤리 💚</a>
     
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>
+            </button> -->
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <!-- <a class="nav-link " aria-current="page" href="#">홈</a> -->
                     </li>
                 </ul>
 
                 <div class="navbar">
-                    <!-- <a class="logo" href="#"> </a> -->
                     <ul>
                         <% if (user) { %>
                             <% if (user.userType === 2) { %>   
-                              <li id="navName">Hello Admin <%= user.email.split('@')[0] %></li>
+                              <li id="navName">✨ Hello Admin <%= user.email.split('@')[0] %></li>
                               <button id="navButton" type="button" onclick="location.href='/productAdd'" class="btn btn-outline-success">상품등록</button> 
                               <button id="navButton" type="button" onclick="location.href='/productAdd'" class="btn btn-outline-success">주문목록</button> 
                               <button id="navButton" type="button" onclick="location.href='/productAdd'" class="btn btn-outline-success">회원정보</button> 
