--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,18 +1,67 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" 
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+        crossorigin="anonymous">
+
+    <!-- JS -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <title>Profile</title>
+<style>
+    body {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        margin: 0;
+        font-family: "Helvetica";
+    }
+
+    .container {
+        text-align: center;
+    }
+
+    #Oztitle {
+        margin-bottom: 40px;
+        text-decoration: none;
+        color: rgb(98, 94, 94);
+    }
+    #button {
+        margin-top: 20px;
+    }
+    #userData{
+        margin: 30px;
+    }
+</style>
+
 </head>
 <body>
-
-    <button id="main" type="button" onclick="location.href='/'" class="btn">main</button>
-    <% if (user) { %>
-    <%= user.email.split('@')[0] %>님 마이페이지 <% } %>
-    <button id="logout" type="button" onclick="location.href='/auth/logout'" class="btn">로그아웃</button>
-    <button id="Withdrawal" type="button" onclick="if (confirm('회원탈퇴를 하시겠습니까?')) location.href='/auth/withdrawal'" class="btn">회원탈퇴</button>
-
+    <div class="container">
+        <h1 id="Oztitle"><a id="Oztitle" href="/">💜 오지는 젤리 💚</a></h1>
+        <% if (user) { %>
+        <p id="userData">✨ <%= user.email.split('@')[0] %> My page ✨</p> 
+        <p id="userData">🥝 Email: <%= user.email %> 🥝</p>
+        <p id="userData">🍓 Phone: <%= user.phone %> 🍓</p>
+        <% } %>
+        <button id="button" type="button" onclick="location.href='/general/cart'" class="btn btn-outline-success">장바구니</button>
+        <button id="button" type="button" onclick="location.href='/auth/logout'" class="btn btn-outline-success">로그아웃</button>
+        <button id="button" type="button" onclick="if (confirm('회원탈퇴를 하시겠습니까?')) location.href='/auth/withdrawal'" class="btn btn-outline-success">회원탈퇴</button>
+    </div>
 </body>
 </html>
