--- a/views/productAdd.ejs
+++ b/views/productAdd.ejs
@@ -140,7 +140,7 @@
                     <ul>
                         <% if (user) { %>
                             <% if (user.userType === 2) { %>   
-                              <li id="navName">✨ Hello Admin <%= user.email.split('@')[0] %></li>
+                              <li id="navName">🥝 Hello Admin <%= user.email.split('@')[0] %></li>
                               <button id="navButton" type="button" onclick="location.href='/productAdd'" class="btn btn-outline-success">상품등록</button> 
                               <button id="navButton" type="button" onclick="location.href='/productAdd'" class="btn btn-outline-success">주문목록</button> 
                               <button id="navButton" type="button" onclick="location.href='/productAdd'" class="btn btn-outline-success">회원정보</button> 
