--- a/views/adminInprofile.ejs
+++ b/views/adminInprofile.ejs
@@ -174,7 +174,7 @@
                     <ul>
                         <% if (user) { %>
                             <% if (user.userType === 2) { %>   
-                              <li id="navName">✨ Hello <%= user.email.split('@')[0] %></li>
+                              <li id="navName">🥝 Hello <%= user.email.split('@')[0] %></li>
                               <button id="navButton" type="button" onclick="location.href='/productAdd'" class="btn btn-outline-success">상품등록</button> 
                               <button id="navButton" type="button" onclick="location.href='#'" class="btn btn-outline-success">주문목록</button> 
                               <button id="navButton" type="button" onclick="location.href='#'" class="btn btn-outline-success">회원정보</button> 
@@ -186,6 +186,8 @@
             </div>
         </div>
     </nav>
+
+    <h1>✨ Upload Your Jelly ✨</h1>
 
     <main class="mt-3">
         <div class="container">
