--- a/views/cartList.ejs
+++ b/views/cartList.ejs
@@ -279,7 +279,7 @@
                     <!-- <a class="logo" href="#"> </a> -->
                     <ul>
                       <% if (user) { %>      
-                          <li id="navName">✨ Hello <%= user.email.split('@')[0] %></li>        
+                          <li id="navName">🥝 Hello <%= user.email.split('@')[0] %></li>        
                           <button id="navButton" type="button" onclick="location.href='/profile'"      class="btn btn-outline-success">My Page</button> 
                           <button id="navButton" type="button" onclick="location.href='/auth/logout'"  class="btn btn-outline-success">Logout</button> 
                         <% } %>
